--- a/src/wechat_app/app.json
+++ b/src/wechat_app/app.json
@@ -11,5 +11,6 @@
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
+  "lazyCodeLoading": "requiredComponents",
   "sitemapLocation": "sitemap.json"
 }
