:sparkles: Add bluetooth feature

--- a/src/wechat_app/app.json
+++ b/src/wechat_app/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/bluetooth/bluetooth",
+    "pages/bluetooth/slave/slave"
   ],
   "window":{
     "backgroundTextStyle":"light",
