:sparkles: Add 3D model visualizer

--- a/src/wechat_app/app.json
+++ b/src/wechat_app/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/bluetooth/bluetooth",
-    "pages/bluetooth/slave/slave"
+    "pages/bluetooth/slave/slave",
+    "pages/cube/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
